{
    "name": "Inputs",
    "maps": [
        {
            "name": "GamePlay",
            "id": "321349be-4af8-4c73-b777-3181153c8e05",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "9bfca6e3-4e91-49c1-b6f0-36ed9c5958bb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Gun1",
                    "type": "Button",
                    "id": "7f9e7dd7-c14f-421d-8cdf-0ca2917d8ae6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Gun2",
                    "type": "Button",
                    "id": "625c3118-8c6f-4970-bdd1-87ad006e4ade",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f24ca630-2119-4eb8-b8e4-a53901736581",
                    "path": "<Keyboard>/x",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d188bcfd-b689-47fd-ae0c-dbada879dcd6",
                    "path": "<Keyboard>/1",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Gun1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "90fe286d-787d-4efa-bff7-2e74b6e3f29f",
                    "path": "<Keyboard>/2",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Gun2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}